# Embassy_Management_ERPNext

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  apps.json  docker-compose.yml
apps/embassy_management/: MANIFEST.in  README.md  license.txt  pyproject.toml
apps/embassy_management/embassy_management/: demo_data.py  hooks.py  modules.txt  patches.txt  permissions.py  setup.py  tasks.py  utils.py
apps/embassy_management/embassy_management/api/: appointments.py  finance.py  portal.py  requirements.py  stripe_payments.py
apps/embassy_management/embassy_management/config/: desktop.py
apps/embassy_management/embassy_management/embassy_management/: display_titles.py
apps/embassy_management/embassy_management/embassy_management/doctype/application_document_requirement/: application_document_requirement.js  application_document_requirement.json  (+1 more)
apps/embassy_management/embassy_management/fixtures/: dashboard_chart.json  email_template.json  number_card.json  role.json  workspace.json
apps/embassy_management/embassy_management/patches/v1_0/: backfill_all_display_titles.py  backfill_display_titles.py  create_email_templates.py  create_generic_workflow.py  create_roles.py
apps/embassy_management/embassy_management/public/css/: embassy.css  portal.css
apps/embassy_management/embassy_management/public/js/: embassy.js  portal.js
apps/embassy_management/embassy_management/templates/includes/: viewertech_footer.html
apps/embassy_management/embassy_management/www/embassy/: apply.html  dashboard.html  index.html  requirements.html  requirements.py
(+180 files in other folders)
